midi: reworked metaevent decoding for PR comments
- fixed remaining snake-cased event names in tests and examples (cf. https://github.com/wader/fq/pull/1004#discussion_r1737054466)
- report 'status' and 'event' seperately (cf. https://github.com/wader/fq/pull/1004#discussion_r1737085013)
- decoded TimeSignature metaevent as length + byte fields (cf. https://github.com/wader/fq/pull/1004#discussion_r1737105173)
- decoded SequencerSpecificEvent metaevent as length + byte fields (cf. https://github.com/wader/fq/pull/1004#discussion_r1737111253)
- reworked Errorf's as Fatalf's for data reads (cf. https://github.com/wader/fq/pull/1004#discussion_r1737123374)

--- a/format/midi/testdata/Makefile
+++ b/format/midi/testdata/Makefile
@@ -15,7 +15,8 @@ run: build
 debug: build
 # 	go run . -d midi dv format/midi/workdir/15ba2fe0cd4bf33a.mid
 # 	go run . -d midi dv format/midi/testdata/unknown-chunks.mid
-	go test ./format -run TestFormats/all/all.fqtest
+# 	go test ./format -run TestFormats/all/all.fqtest
+	go run . -d midi dv format/midi/workdir/sequencer-specific-event.mid
 
 test: build
 	go test ./format -run TestFormats/midi
