midi: cleaned up and simplied event decoding logic
- delineated NoteOn and NoteOff events
- simplified MIDI event decoding with function map
- decoded MIDI event and channel as nibbles
- reworked system exclusive event decoding
- fixed peekEvent to correctly decode end of file events

--- a/format/midi/testdata/Makefile
+++ b/format/midi/testdata/Makefile
@@ -13,12 +13,16 @@ regenerate: build
 	go test ./format -run TestFormats/midi -update
 
 run: build
-	go run . -d midi dv format/midi/testdata/midi/test.mid
+	go run . -d midi dv format/midi/testdata/reference.mid
 
 debug: build
-# 	go run . -d midi dv format/midi/testdata/events/note-on.mid
-	./fq -d midi 'grep_by(.event=="note_on" or .event=="note_off") | [.time.tick, .note.note] | join(" ")' format/midi/testdata/midi/test.mid
-# 	./fq -d midi 'grep_by(.event=="note_on").note' format/midi/testdata/midi/test.mid
+	go run . -d midi dv format/midi/testdata/events/note-off.mid
+	go run . -d midi dv format/midi/testdata/events/note-on.mid
+	go run . -d midi dv format/midi/testdata/events/controller.mid
+	go run . -d midi dv format/midi/testdata/events/polyphonic-pressure.mid
+	go run . -d midi dv format/midi/testdata/events/program-change.mid
+	go run . -d midi dv format/midi/testdata/events/channel-pressure.mid
+	go run . -d midi dv format/midi/testdata/events/pitch-bend.mid
 
 test: build
 	go test ./format -run TestFormats/midi
@@ -57,15 +61,19 @@ events: build
 	go run . -d midi dv format/midi/testdata/events/channel-pressure.mid
 	go run . -d midi dv format/midi/testdata/events/pitch-bend.mid
 
+	go run . -d midi dv format/midi/testdata/events/sysex-message.mid
+	go run . -d midi dv format/midi/testdata/events/sysex-continuation.mid
+	go run . -d midi dv format/midi/testdata/events/sysex-escape.mid
+
 fuzzes: build
 	go run . -d midi dv format/midi/testdata/fuzz/15ba2fe0cd4bf33a.mid
 	go run . -d midi dv format/midi/testdata/fuzz/8450de010e750ed5.mid
 
 query: build
-	./fq -d midi '.. | select(.event=="track_name")? | "\(.name)"' format/midi/testdata/midi/twinkle.mid 
-	./fq -d midi '.. | select(.event=="tempo")?.tempo' format/midi/testdata/midi/test.mid
-	./fq -d midi '.. | select(.event=="key_signature")?.key' format/midi/testdata/midi/test.mid
-	./fq -d midi 'grep_by(.event=="note_on" or .event=="note_off") | "\(.time.tick) \(.note)"' format/midi/testdata/midi/test.mid
+	./fq -d midi '.. | select(.event=="track_name")? | "\(.track_name)"' format/midi/testdata/midi/twinkle.mid 
+	./fq -d midi '.. | select(.event=="tempo")?.tempo' format/midi/testdata/reference.mid
+	./fq -d midi '.. | select(.event=="key_signature")?.key_signature' format/midi/testdata/reference.mid
+	./fq -d midi 'grep_by(.event=="note_on") | "\(.time.tick) \(.note_on.note)"' format/midi/testdata/reference.mid
 
 all: test lint
 	make -f Makefile test
