Mapped SMPTE frame rates to strings and fixed bug in SMPTE offset metaevent decoding (cf. https://github.com/wader/fq/pull/1023#discussion_r1833943323)

--- a/format/midi/testdata/Makefile
+++ b/format/midi/testdata/Makefile
@@ -16,10 +16,20 @@ run: build
 	go run . -d midi dv format/midi/testdata/reference.mid
 
 debug: build
-	go run . -d midi dv format/midi/testdata/midi/format-0x.mid
-	go run . -d midi dv format/midi/testdata/midi/format-0y.mid
-	go test ./format -run TestFormats/midi/testdata/format-0x.fqtest
-	go test ./format -run TestFormats/midi/testdata/format-0y.fqtest
+# 	go run . -d midi dv format/midi/testdata/midi/smpte-timecode-24.mid
+# 	go run . -d midi dv format/midi/testdata/midi/smpte-timecode-25.mid
+# 	go run . -d midi dv format/midi/testdata/midi/smpte-timecode-29.mid
+# 	go run . -d midi dv format/midi/testdata/midi/smpte-timecode-30.mid
+
+	go test ./format -run TestFormats/midi/testdata/smpte-timecode-24.fqtest
+# 	go test ./format -run TestFormats/midi/testdata/smpte-timecode-25.fqtest
+# 	go test ./format -run TestFormats/midi/testdata/smpte-timecode-29.fqtest
+# 	go test ./format -run TestFormats/midi/testdata/smpte-timecode-30.fqtest
+
+# 	go run . -d midi dv format/midi/testdata/midi/format-0x.mid
+# 	go run . -d midi dv format/midi/testdata/midi/format-0y.mid
+# 	go test ./format -run TestFormats/midi/testdata/format-0x.fqtest
+# 	go test ./format -run TestFormats/midi/testdata/format-0y.fqtest
 
 test: build
 	go test ./format -run TestFormats/midi
