--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -9,7 +9,7 @@ jobs:
   version_update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
         with:
           # to allow push changes of workflow config
           token: ${{ secrets.BUMP_TOKEN }}
